<resources>
    <string name="app_name">MemoryGame</string>
    <string name="play_btn">PLAY</string>
    <string name="rules_btn">RULES</string>
    <string name="restart_btn">RESTART</string>
    <string name="menu_restart">RESTART</string>
    <string name="menu_shuffle">SHUFFLE</string>
    <string name="points_str">Points: %1$d</string>
    <string name="try_str">Tries: %1$d</string>

    <string name="dialog_congrats_str">You finished! Score was %1$d. Play again?</string>
    <string name="dialog_saved_game_str">Old game saved, continue?</string>
    <string name="dialog_ok_str">OK</string>
    <string name="dialog_no_str">NO</string>
    <string name="dialog_go_back_str">GO BACK</string>
    <string name="dialog_new_game_str">NEW GAME</string>

    <string name="rules_title">RULES of the GAME:</string>
    <string name="rules_one">1. The user is shown 20 tiles. Hidden below these tiles are 10 random images (use your own) each repeated twice.</string>
    <string name="rules_two">2. The user can touch on any two tiles. Touching on a tile will show the image.</string>
    <string name="rules_three">3. If the two tiles have matching images, they disappear (Use a check or something to indicate its already matched). The user gets a point.</string>
    <string name="rules_four">4. If the two tiles do NOT have matching images, they flip over to being tiles again (flip animation not required).</string>
    <string name="rules_five">5. Hitting the back soft key while playing will take the user back to the first screen (happens automatically). Trying to play should restore the playing activity to the previous state (may need some state handling). That is, if I hit back after matching say 10 tiles, and return to playing, it should show me the remaining 10 cards to match.</string>
    <string name="bonus_rule">6. BONUS RULE! The scoring is made so that if you finish the game in 10 tries you get 100 points. If not, you will get less and less score for more tries.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
